--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     </div>
     <div class="col-6">
-    <div class="current-wind-humidity"><strong>Wind:</strong> <span class="speed"></span> km/h 
+    <div class="current-wind-humidity"><strong>Wind:</strong> <span class="speed"></span>
     </br>
       <strong>Description</strong></div>
     </div>
