Added description from api

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="col-6">
     <div class="current-wind-humidity"><strong>Wind:</strong> <span class="speed"></span>
     </br>
-      <strong>Description</strong></div>
+      <span class="description"></span>
     </div>
      </div>
     <h3><strong>Five Day Forecast:</strong></h3>
