Update for week 7 homework
Updated to include wind speed, weather description, and weather icon.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </form>
     <button id="enterButton" type="button" class="btn btn-outline-light">Enter</button>
     <button class="currentLocation">Search current location</button>
-    <h1><strong>Current Weather For:</strong></h1>
-    <h2 id="cityName">Please search location</h2>
     <h4>Day Time</h4>
+    <h1><strong>Current Weather For:</strong></h1>
+    <h2 id="cityName"></h2> <img class="icon"/>
     <h5><span class=celsius>°C</span><span> / </span><span class="fahrenheit">°F</span></h5>
     <div class="row">
     <div class="col-6">
